# Nova_Rangers

./: README.md  design_guidelines.json
.emergent/: emergent.yml
communityPulse-nova-rangers/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  test_adk.py  test_out.txt
communityPulse-nova-rangers/agents/: __init__.py  pipeline.py
communityPulse-nova-rangers/backend/: __init__.py  config.py  firebase_init.py  main.py  pyproject.toml  requirements.txt
communityPulse-nova-rangers/backend/models/: __init__.py  assignment.py  need.py  organization.py  submission.py  volunteer.py
communityPulse-nova-rangers/backend/routers/: __init__.py  analytics.py  assignments.py  auth.py  needs.py  organizations.py  submissions.py  volunteers.py
communityPulse-nova-rangers/backend/services/: embedding_service.py  firestore_client.py  ocr_service.py  priority_ranker.py  scheduler_jobs.py  vector_store.py
communityPulse-nova-rangers/backend/tests/: test_analytics_summary.py  test_submissions_process_route.py
communityPulse-nova-rangers/dashboard/: docker-compose.yml  superset_config.py
communityPulse-nova-rangers/docker/: Dockerfile.agents  Dockerfile.backend
communityPulse-nova-rangers/frontend/: README.md  analysis_options.yaml  firebase.json  fix_opacity.py  flutter_analyze.txt  pubspec.yaml
communityPulse-nova-rangers/scripts/: clear_firestore.py  deploy.ps1  deploy.sh  generate_data.py  seed_firestore.py  test_pipeline.py
frontend/: .env
frontend/src/: App.css  App.js  index.css
memory/: PRD.md
test_reports/: iteration_1.json
(+42 files in other folders)
